Clean code, fixed modal and body misalignment

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -343,7 +343,7 @@ label {
 	align-items: center;
 }
 
-#modal-close-button {
+.modal-close-button {
 	cursor: pointer;
 	height: 12px;
 	width: 12px;
@@ -353,7 +353,7 @@ label {
 
 #modal-overlay {
 	display: none;
-	position: absolute;
+	position: fixed;
 	justify-content: center;
 	align-items: center;
 	top: 0;
@@ -403,11 +403,56 @@ body.no-scroll {
 }
 
 #modal-gallery figure {
-	height: 103px;
+	height: 110px;
 	width: 80px;
 }
 
 #modal-gallery img {
 	height: 100%;
 	width: 100%;
+}
+
+#add-photo-container {
+	width: 420px;
+	height: 170px;
+	background-color: rgba(232, 241, 246, 1);
+	margin-top: 36px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#add-photo-container button {
+	font-size: 14px;
+	font-weight: 500;
+	margin-bottom: 7px;
+	margin-top: 6px;
+	padding: 10px 33px;
+	background-color: rgba(203, 214, 220, 1);
+	border-radius: 50px;
+}
+
+#add-photo-container img {
+	width: 76px;
+	height: 76px;
+}
+
+#add-photo-container p {
+	font-size: 10px;
+	font-weight: 400;
+}
+
+#add-photo-modal label {
+	font-size: 14px;
+	font-weight: 500;
+}
+
+#add-photo-button {
+	width: 237px;
+	margin-top: 80px;
+	background-color: rgba(167, 167, 167, 1);
+	color: white;
+	padding: 10px 50px;
+	border-radius: 60px;
 }
